--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^11.0.2",
     "framer-motion": "^11.11.17",
+    "process": "^0.11.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
@@ -18,7 +19,8 @@
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
     "recoil": "^0.7.7",
-    "uuid": "^11.0.3",
+    "simple-peer": "^9.11.1",
+    "uuid": "^11.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
