--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "firebase": "^11.0.2",
     "framer-motion": "^11.11.17",
+    "mongodb": "^6.17.0",
     "process": "^0.11.10",
     "react": "^18.3.1",
     "react-color": "^2.19.3",
